--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<h1>Hello Squash World!</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, orientation=landscape">
+</head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NCNJGQDJR5"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-NCNJGQDJR5');
+</script>
+
+<body>
+  <h1>Hello Squash World!</h1>
+</body>
