--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 
     input {
         width: 80%;
+        max-width: 250px;
         background: rgba(255, 255, 255, 0.8);
         color: #333;
     }
